env_config/tests/ui/tuple_struct.stderr
error: cannot be derived for tuple structs
 --> tests/ui/tuple_struct.rs:4:27
  |
4 | struct MyLovelyTupleStruct(bool, bool, bool);
  |                           ^^^^^^^^^^^^^^^^^^
