env_config/tests/ui/tuple_struct.rs
use env_config::{EnvConfig};

#[derive(EnvConfig)]
struct MyLovelyTupleStruct(bool, bool, bool);

fn main() {}
